fix unrated reviews alignment (bug 1156674)

--- a/src/media/css/tiles.styl
+++ b/src/media/css/tiles.styl
@@ -122,7 +122,7 @@ $greater-than-mobile = unquote('(min-width: 330px)');
         height: $detail-icon-size;
         padding-top: 0;
     }
-    .rating-link .long {
+    .rating-link .long:not(.unrated) {
         +ltr() {
             margin-left: 12px;
         }
